--- a/front-end/h5/src/components/core/styles/index.scss
+++ b/front-end/h5/src/components/core/styles/index.scss
@@ -50,6 +50,36 @@
     color: #aaa;
     padding: 4px;
   }
+
+
+
+}
+
+.hidden {
+  display: none !important;
+}
+
+// 拖拽出来的控件
+.drag-dom {
+  user-select: none;
+  cursor: grabbing;
+  position: fixed !important;
+  display: inline-block;
+  box-sizing: border-box;
+  background-color: #1890ff;
+  color: white;
+  padding-left: 10px;
+  border-radius: 4px;
+  line-height: 30px;
+  width: 130px;
+  z-index: 100;
+  border: 1px solid #CCC;
+  box-shadow: 0 2px 2px 0 rgba(40, 120, 255, 0.1), 0 0 2px 0 rgba(0, 0, 0, 0.12);
+  opacity: 0.7;
+
+  > i {
+      margin-right: 5px;
+  }
 }
 
 .ant-tabs-nav .ant-tabs-tab {
